GPC/tests/examples/fail/errArith10.gpc

void errArith10() {
    return 3 ^ 3.0;
}


